--- a/info.toml
+++ b/info.toml
@@ -2,8 +2,9 @@
 name = "Editor Route"
 author = "Wambo"
 category = "Map Editor"
-version = "0.9.2.1 Beta"
+version = "0.9.3 Beta"
 siteid = 489
 
 [script]
+defines = ["ER_DEBUG"]
 dependencies = [ "Camera" ]
